<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/labelProductId"
            android:layout_width="0px"
            android:layout_weight="2"
            android:layout_marginLeft="8dp"
            android:editable="false"
            android:layout_height="wrap_content"
            android:text="@string/productid_label" />

        <EditText
            android:id="@+id/editTextWorkTimeRecordId"
            android:layout_weight="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/labelArrivalTime"
            android:layout_width="0px"
            android:layout_weight="2"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content"
            android:text="@string/arrival_time_label" />

        <EditText
            android:id="@+id/editTextArrivalTime"
            android:layout_weight="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <TextView
            android:id="@+id/labelLeaveTime"
            android:layout_width="0px"
            android:layout_marginLeft="8dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/leave_time_label" />

        <EditText
            android:id="@+id/editTextLeaveTime"
            android:layout_weight="8"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>






    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:id="@+id/linearLayout1"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:orientation="vertical" >-->

        <!--<DatePicker-->
            <!--android:id="@+id/datePicker1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" >-->
        <!--</DatePicker>-->

        <!--<TimePicker-->
            <!--android:id="@+id/timePicker1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" >-->
        <!--</TimePicker>-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/timePicker">

        <Button
            android:id="@+id/buttonWorkTimeRecordSave"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/productbutton_save_label" />

        <Button
            android:id="@+id/buttonWorkTimeRecordDelete"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/productbutton_delete_label" />

    </LinearLayout>


</RelativeLayout>
