<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.adam.timemanagerultimate.MainActivity">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:src="@drawable/icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_below="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp">

        <LinearLayout
            android:id="@+id/goHoOvLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp">

            <TextView
                android:id="@+id/goHomeOv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="GoHomeOv :  "
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/goHomeOvNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="##:##:##"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/goHoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/goHoOvLayout"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp">

            <TextView
                android:id="@+id/goHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="GoHomeOv :  "
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/goHomeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="##:##:##"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/overtimeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/goHoLayout"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp">

            <TextView
                android:id="@+id/overtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="GoHomeOv :  "
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/overtimeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="##:##:##"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/serviceButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/showStatisticsButtons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="2">

        <Button
            android:id="@+id/startServiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="startUpdateService"
            android:text="@string/startServiceString" />

        <Button
            android:id="@+id/stopServiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="stopUpdateService"
            android:text="@string/stopServiceString" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/showStatisticsButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="2">

        <Button
            android:id="@+id/doRecordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.79"
            android:onClick="doRecord"

            android:text="@string/arrivalTimeString" />

        <Button
            android:id="@+id/showStatisticsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.21"
            android:onClick="showStatistics"
            android:text="@string/showStatisticsString" />
    </LinearLayout>
</RelativeLayout>
